Fixed footer spacing issue on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -153,7 +153,6 @@
 
 @include media-query($on-palm) {
     .footer-col {
-        float: none;
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
         width:         calc(100% - (#{$spacing-unit} / 2));
     }
